Allow to configure desturl

--- a/templates/dup.conf.erb
+++ b/templates/dup.conf.erb
@@ -38,6 +38,7 @@
 <%= 'keep = ' + @keep if @keep %>
 <%= 'bandwidthlimit = ' + @bandwidthlimit if @bandwidthlimit %>
 <%= 'sshoptions = ' + @sshoptions if @sshoptions %>
+<%= 'desturl = ' + @desturl if @desturl %>
 <%= 'destdir = ' + @destdir if @destdir %>
 <%= 'desthost = ' + @desthost if @desthost %>
 <%= 'destuser = ' + @destuser if @destuser %>
